toolkit/components/places/tests/sync/test_sync_utils.js
@@ -2142,6 +2142,7 @@ add_task(async function test_pushChanges() {
   }
 
   info("Pull changes");
+  let totalSyncChanges = PlacesUtils.bookmarks.totalSyncChanges;
   let changes = await PlacesSyncUtils.bookmarks.pullChanges();
   {
     let actualChanges = Object.entries(changes).map(([recordId, change]) => ({
@@ -2185,6 +2186,7 @@ add_task(async function test_pushChanges() {
   }
 
   await PlacesSyncUtils.bookmarks.pushChanges(changes);
+  equal(PlacesUtils.bookmarks.totalSyncChanges, totalSyncChanges + 3);
 
   {
     let fields = await PlacesTestUtils.fetchBookmarkSyncFields(
@@ -2246,6 +2248,7 @@ add_task(async function test_changes_between_pull_and_push() {
   });
 
   info("Pull changes");
+  let totalSyncChanges = PlacesUtils.bookmarks.totalSyncChanges;
   let changes = await PlacesSyncUtils.bookmarks.pullChanges();
   Assert.equal(changes[guids.bmk].counter, 1);
   Assert.equal(changes[guids.bmk].tombstone, false);
@@ -2255,6 +2258,7 @@ add_task(async function test_changes_between_pull_and_push() {
 
   info("Push changes");
   await PlacesSyncUtils.bookmarks.pushChanges(changes);
+  equal(PlacesUtils.bookmarks.totalSyncChanges, totalSyncChanges + 2);
 
   // we should have a tombstone.
   let ts = await PlacesTestUtils.fetchSyncTombstones();
